Bug 1770787 - Replace `QM_TRY` with `QM_WARNONLY_TRY`. r=dom-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D147678